refactor: removed blog section

--- a/components/blogs/index.html
+++ b/components/blogs/index.html
@@ -44,7 +44,7 @@
         <ul class="no-bullet container-blog">
             <li>
                 <article class="article-blog">
-                    <h2>CSS Box Model</h2>
+                    <h2>Let's talk about CSS Box Model</h2>
                     <small>September, 2021</small>
                     <p>
                         All the HTML elements are considered as boxes in our CSS file. And, how these boxes are aligned in our web page is answered by <strong>CSS Box Model</strong>.
