fix: project url

--- a/components/projects/neoG.html
+++ b/components/projects/neoG.html
@@ -244,7 +244,7 @@
                     <p>Take The Quiz: How Many Capital Cities Can You Name?</p>
 
                     <p>This is a CLI App in Javascript using Chalk Library for terminal string styling.</p>      
-                    <a href="https://replit.com/@nayyyhaa/whats-the-capital-quiz?embed=1&output" class="primary-link">Live Project</a>
+                    <a href="https://replit.com/@nayyyhaa/whats-the-capital-quiz" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/what-s-the-capital-quiz" class="secondary-link">View Source</a>
                 </article>
             </li>
@@ -253,7 +253,7 @@
                     <h2>markOne: Do you know me?</h2>
                     <small>March, 2021</small>
                     <p>A CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>      
-                    <a href="https://replit.com/@nayyyhaa/Kaun-hai-Neha?embed=1&output" class="primary-link">Live Project</a>
+                    <a href="https://replit.com/@nayyyhaa/Kaun-hai-Neha" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/do-you-know-me" class="secondary-link">View Source</a>
                 </article>
             </li>
