--- a/components/projects/index.html
+++ b/components/projects/index.html
@@ -57,14 +57,14 @@
                     <a href="/components/projects/neoG.html" class="primary-link">Live Projects</a>
                 </article>
             </li>
-            <li>
+            <!-- <li>
                 <article class="article -ow">
                     <h2>Planet JS</h2>
                     <small>May, 2021</small>
                     <p>Here I've compiled all my projects made with using Vanilla JS.</p>       
                     <a href="/components/projects/PlanetJS.html" class="primary-link">Live Project</a>
                 </article>
-            </li>
+            </li> -->
             <li>
                 <article class="article -ow">
                     <h2>Instagram Clone</h2>
@@ -84,7 +84,131 @@
                     <a href="https://github.com/nayyyhaa/my-color-palette" class="secondary-link">View Source</a>
                 </article>
             </li>
-
+            <li>
+                <article class="article -ow">
+                    <h2>Paranoma App</h2>
+                    <small>July, 2021</small>
+                    <p>This is a vanillaJS project where user can search and download any images.</p>
+                    <a href="https://panorama-app.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/panorama-app" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <!-- <li>
+                <article class="article -ow">
+                    <h2>Stock n' Shock</h2>
+                    <small>September, 2021</small>
+                    <p>This is a vanillaJS project to check if the user has inccured profit or loss in his/her stock purchase.</p>
+                    <a href="https://stocknshock.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/stock-n-shock" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
+                    <h2>Triangle-o-thon</h2>
+                    <small>September, 2021</small>
+                    <p>This is Vanilla Js project to teach you all about the world.</p>
+                    <a href="https://triangleothon.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/triangle-o-thon" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
+                    <h2>Palindrome Birthday</h2>
+                    <small>August, 2021</small>
+                    <p>This is Vanilla Js project to validate if your birthday is a palindrome a not.</p>
+                    <a href="https://bdayreverse.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/birthday-palindrome" class="secondary-link">View Source</a>
+                </article>
+            </li> -->
+            <!-- <li>
+                <article class="article -ow">
+                    <h2>Color Splash</h2>
+                    <small>May, 2021</small>
+                    <p>I made a clone of coolors website (generate feature) using Vanilla JS and chroma library.</p>
+                    <p>Features: generate different color palettes, copy, customise & lock the specific color, save the palette in Local Storage, access saved color palettes from the library.</p>
+                    <a href="https://colorsplash.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/my-color-palette" class="secondary-link">View Source</a>
+                </article>
+            </li> -->
+            <li>
+                <article class="article -ow">
+                    <h2>Make my Music</h2>
+                    <small>May, 2021</small>
+                    <p>Make My Music is a beatmaker app which is made with the concepts of HTML, CSS and JavaScript</p>
+                    <a href="https://makemymusic.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/make-my-music" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
+                    <h2>Weathify</h2>
+                    <small>May, 2021</small>
+                    <p>Weather app made using HTML, CSS, VanillaJs & OpenWeatherMap API</p>
+                    <p>Features: get weather information by location via GPS ,search weather for specific place, change the UI to dark/light mode</p>       
+                    <a href="https://weathify.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/weather-app" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
+                    <h2>Tasks-2-DO</h2>
+                    <small>May, 2021</small>
+                    <p>Organize your tasks with this To-do App which I've made.</p>
+                    <p>Features: Add, Delete, Filtering todos based on tasks completed, pending. Local Storage is also available.</p>       
+                    <a href="https://tasks2do.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/To-do-App" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
+                    <h2>Piano Simulation</h2>
+                    <small>May, 2021</small>
+                    <p>Always wanted to buy my own piano, but instead I build one.</p>
+                    <p>This is a virtual piano SIM made with JS concepts.</p>       
+                    <a href="https://pianosimulation.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/piano-simulation" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <!-- <li>
+                <article class="article -ow">
+                    <h2>Shakespeare Translator</h2>
+                    <small>April, 2021</small>
+                    <p>I've always been curious about how Shakespeare would've expressed my thoughts in his words. Have you been too??</p>
+                    <p>This translator takes English as input and converts to Shakespeare English. Created using VanillaJs.</p>       
+                    <a href="https://iamshakespeare.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/shakespeare-translator" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
+                    <h2>Minion Speaks</h2>
+                    <small>April, 2021</small>
+                    <p>This app converts your English text into equivalent Minionese text.</p>
+                    <p>Made using VanillaJs with love.</p>       
+                    <a href="https://letsbanana.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/minion-speaks" class="secondary-link">View Source</a>
+                </article>
+            </li> -->
+            <li>
+                <article class="article -ow">
+                    <h2>Find My Destiny</h2>
+                    <small>April, 2021</small>
+                    <p>Can you guess the correct number between 1 - 100?</p>
+                    <p>It's a simple app created with concepts of VanillaJs</p>       
+                    <a href="https://find-my-destiny.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/guess-the-number-game" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
+                    <h2>My Piggy Bank</h2>
+                    <small>March, 2021</small>
+                    <p>Always have trouble while managing your expenses? Worry not! MyPiggyBank is a web application helping you with finances.</p> 
+                    <p>This website is created using VanillaJs.</p>      
+                    <a href="https://mypiggybank.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/MyPiggyBank" class="secondary-link">View Source</a>
+                </article>
+            </li>
             <!-- <li>
                 <article class="article -ow">
                     <h2>Travel with me</h2>
@@ -105,7 +229,7 @@
                     <a href="https://codesandbox.io/s/emoji-predictor-7uk7s" class="secondary-link">View Source</a>
                 </article>
             </li> -->
-            <li>
+            <!-- <li>
                 <article class="article -ow">
                     <h2>NeneXone</h2>
                     <small>March, 2021</small>
@@ -114,8 +238,8 @@
                     <a href="https://nenexone.netlify.app/" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/shopping-cart" class="secondary-link">View Source</a>
                 </article>
-            </li>
-            <li>
+            </li> -->
+            <!-- <li>
                 <article class="article -ow">
                     <h2>Words Jungle</h2>
                     <small>March, 2021</small>
@@ -124,7 +248,7 @@
                     <a href="https://words-jungle.netlify.app/" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/dictionary-app" class="secondary-link">View Source</a>
                 </article>
-            </li>
+            </li> -->
         </ul>
         
     <footer class="footer" id="connect">
