feat: logo navigation

--- a/components/projects/index.html
+++ b/components/projects/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navigation">
         <div class="container-fluid">
-            <div class="brand-name"> < Neha Gupta /></div>
+            <div class="brand-name"><a href="/">&lt; Neha Gupta /&gt;</a></div>
             <div class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
             <ul class="no-bullet nav-items -inline">
                 <li>
