--- a/components/blogs/component.html
+++ b/components/blogs/component.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navigation">
         <div class="container-fluid">
-            <div class="brand-name"><i> < Neha Gupta /></i></div>
+            <div class="brand-name"><a href="/">&lt; Neha Gupta /&gt;</a></div>
             <ul class="no-bullet -inline">
                 <li>
                     <a href="/">Home</a>
@@ -101,7 +101,7 @@
         <p>I've used gradient here.</p>
         <nav class="navigation">
             <div class="container-fluid">
-                <div class="brand-name">NeneComapany</div>
+            <div class="brand-name"><a href="/">&lt; NeneCompany /&gt;</a></div>
                 <ul class="no-bullet -inline">
                     <li>
                         <a href="/" class="active">Home</a>
