--- a/components/projects/index.html
+++ b/components/projects/index.html
@@ -67,6 +67,15 @@
             </li> -->
             <li>
                 <article class="article -ow">
+                    <h2>Chimes Music App</h2>
+                    <small>September, 2021</small>
+                    <p>Chimes is a music player app with an integrated library made using ReactJS</p>
+                    <a href="https://chimes.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/chimes-music-app" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
                     <h2>Instagram Clone</h2>
                     <small>July, 2021</small>
                     <p>This is an instagram clone (user profile page) that I've made using ReactJS and Redux</p>
@@ -77,7 +86,7 @@
              <li>
                 <article class="article -ow">
                     <h2>Color Splash</h2>
-                    <small>May, 2021</small>
+                    <small>July, 2021</small>
                     <p>I made a clone of coolors website (generate feature) using Vanilla JS and chroma library.</p>
                     <p>Features: generate different color palettes, copy, customise & lock the specific color, save the palette in Local Storage, access saved color palettes from the library.</p>
                     <a href="https://colorsplash.netlify.app/" class="primary-link">Live Project</a>
@@ -87,7 +96,7 @@
             <li>
                 <article class="article -ow">
                     <h2>Paranoma App</h2>
-                    <small>July, 2021</small>
+                    <small>May, 2021</small>
                     <p>This is a vanillaJS project where user can search and download any images.</p>
                     <a href="https://panorama-app.netlify.app/" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/panorama-app" class="secondary-link">View Source</a>
